# CMSC5743

./: CMakeLists.txt  README.md  main.cpp
acc_function/: AcceleratorFunction.h
acc_function/strassen/: StrassenFunction.h
acc_function/winograd/: WinogradFunction.h  WinogradFunction_1D.cpp  WinogradFunction_1D.h
feature_map/: DirectFeatureMap.cpp  DirectFeatureMap.h  Direct_FeatureMap.cpp  Direct_FeatureMap.h  FeatureMap.h  Im2colFeatureMap.cpp  Im2colFeatureMap.h  Im2colFeatureMap_OMP.cpp  Im2colFeatureMap_OMP.h  Im2col_FeatureMap.cpp  Im2col_FeatureMap.h  Im2col_FeatureMap_3D.cpp  Im2col_FeatureMap_3D.h  Im2col_FeatureMap_OMP_SIMD.cpp  Im2col_FeatureMap_OMP_SIMD.h  RegularSparseFeatureMap.h
include/: npy.hpp
kernel/: DirectKernel.cpp  DirectKernel.h  Direct_Kernel.cpp  Direct_Kernel.h  Im2colKernel.cpp  Im2colKernel.h  Im2col_Kernel.cpp  Im2col_Kernel.h  Im2col_Kernel_3D.cpp  Im2col_Kernel_3D.h  Kernel.h
output_map/: OutputMap.cpp  OutputMap.h
util/: GetTime.h
